--- a/InstaView/app/src/main/res/layout/item_photo.xml
+++ b/InstaView/app/src/main/res/layout/item_photo.xml
@@ -18,10 +18,12 @@
         android:text="@string/new_text"
         android:id="@+id/tvUserName"
         android:textSize="9sp"
+        android:textColor="@color/darkblue"
         android:layout_alignTop="@+id/ivUserProfile"
         android:layout_alignBottom="@+id/ivUserProfile"
         android:layout_toRightOf="@+id/ivUserProfile"
         android:layout_toEndOf="@+id/ivUserProfile" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,9 +31,23 @@
         android:text="@string/new_text"
         android:textSize="9sp"
         android:id="@+id/tvDate"
-        android:layout_margin="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/ivUserProfile" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/icHourGlass"
+        android:src="@drawable/clock_icon"
+        android:minHeight="20dp"
+        android:layout_toLeftOf="@+id/tvDate"
+        android:scaleType="fitEnd"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="3dp"
+        android:layout_alignTop="@+id/ivUserProfile"
         android:layout_alignBottom="@+id/ivUserProfile" />
 
     <ImageView
@@ -41,10 +57,26 @@
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:contentDescription="@string/popular_photos"
-        android:minHeight="200dp"
+        android:minHeight="150dp"
+        android:layout_marginBottom="5dp"
         android:layout_below="@+id/ivUserProfile"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/icHeart"
+        android:src="@drawable/heart_icon"
+        android:layout_alignParentLeft="true"
+        android:layout_alignBottom="@+id/tvLikes"
+        android:minHeight="20dp"
+        android:scaleType="fitCenter"
+        android:layout_toStartOf="@+id/tvUserName"
+        android:layout_alignTop="@+id/tvLikes"
+        android:layout_alignRight="@+id/ivUserProfile"
+        android:layout_alignEnd="@+id/ivUserProfile" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,10 +84,9 @@
         android:text="@string/new_text"
         android:id="@+id/tvLikes"
         android:textSize="10sp"
-        android:layout_margin="5dp"
-        android:ellipsize="end"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/ivPhoto" />
+        android:textColor="@color/darkblue"
+        android:layout_below="@+id/ivPhoto"
+        android:layout_toRightOf="@+id/icHeart" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,7 +98,6 @@
         android:maxLines="3"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvLikes" />
 
@@ -76,8 +106,10 @@
         android:layout_height="wrap_content"
         android:text="@string/new_text"
         android:layout_margin="3dp"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:id="@+id/tvCommentUser1"
+        android:textColor="@color/darkblue"
+        android:typeface="serif"
         android:layout_below="@+id/tvCaption"
         android:layout_alignLeft="@+id/tvCaption"
         android:layout_alignStart="@+id/tvCaption" />
@@ -88,7 +120,7 @@
         android:text="@string/new_text"
         android:id="@+id/tvComment1"
         android:layout_marginTop="3dp"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:maxLines="1"
         android:layout_below="@+id/tvCaption"
         android:layout_toRightOf="@+id/tvCommentUser1"
@@ -99,9 +131,11 @@
         android:layout_height="wrap_content"
         android:text="@string/new_text"
         android:layout_margin="3dp"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:id="@+id/tvCommentUser2"
-        android:layout_below="@+id/tvComment1"
+        android:typeface="serif"
+        android:textColor="@color/darkblue"
+        android:layout_below="@+id/tvCommentUser1"
         android:layout_alignLeft="@+id/tvCaption"
         android:layout_alignStart="@+id/tvCaption" />
 
@@ -111,9 +145,9 @@
         android:text="@string/new_text"
         android:id="@+id/tvComment2"
         android:layout_marginTop="3dp"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:maxLines="1"
-        android:layout_below="@+id/tvComment1"
+        android:layout_below="@+id/tvCommentUser1"
         android:layout_toRightOf="@+id/tvCommentUser2"
         android:layout_toEndOf="@+id/tvCommentUser2" />
 
