--- a/InstaView/app/src/main/res/layout/item_comment.xml
+++ b/InstaView/app/src/main/res/layout/item_comment.xml
@@ -32,7 +32,7 @@
         android:text="@string/new_text"
         android:id="@+id/tvCreateTime"
         android:textColor="@color/blue"
-        android:layout_alignParentTop="true"
+        android:layout_alignBaseline="@+id/tvFrom"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/ivFromProfile"
         android:layout_alignBottom="@+id/ivFromProfile"/>
