--- a/GridImageSearch/app/src/main/res/menu/menu_main.xml
+++ b/GridImageSearch/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,13 @@
         android:id="@+id/miSearch"
         android:icon="@drawable/ic_color"
         app:showAsAction="ifRoom|withText"
-        android:title="Filter">
-    </item>
+        android:title="@string/filter" />
+
+    <item
+        android:id="@+id/action_search"
+        android:orderInCategory="5"
+        android:title="@string/lookup"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
