--- a/GridImageSearch/app/src/main/res/layout/full_image_layout.xml
+++ b/GridImageSearch/app/src/main/res/layout/full_image_layout.xml
@@ -9,8 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:minWidth="600dp"
-        android:minHeight="600dp"
+        android:minWidth="125dp"
+        android:minHeight="125dp"
         android:adjustViewBounds="true"
         android:id="@+id/ivFullImage" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvFullTitle"
+        android:text="@string/caption"
+        android:ellipsize="end"
+        android:maxLines="3"/>
+
 </LinearLayout>
