--- a/GridImageSearch/app/src/main/res/menu/menu_main.xml
+++ b/GridImageSearch/app/src/main/res/menu/menu_main.xml
@@ -16,4 +16,10 @@
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/menu_item_share"
+        app:showAsAction="ifRoom"
+        android:title="@string/share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
