--- a/GridImageSearch/app/src/main/res/menu/menu_main.xml
+++ b/GridImageSearch/app/src/main/res/menu/menu_main.xml
@@ -17,10 +17,10 @@
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
 
-    <item
+    <!-- <item
         android:id="@+id/menu_item_share"
         app:showAsAction="ifRoom"
         android:title="@string/share"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" /> -->
 
 </menu>
