--- a/GridImageSearch/app/src/main/res/layout/full_image_layout.xml
+++ b/GridImageSearch/app/src/main/res/layout/full_image_layout.xml
@@ -5,12 +5,21 @@
     android:layout_height="match_parent"
     android:padding="20dp">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tbFull"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
         android:minWidth="125dp"
         android:minHeight="125dp"
+        android:layout_margin="10dp"
         android:adjustViewBounds="true"
         android:id="@+id/ivFullImage" />
 
