--- a/GridImageSearch/app/src/main/res/menu/menu_dialog.xml
+++ b/GridImageSearch/app/src/main/res/menu/menu_dialog.xml
@@ -11,4 +11,10 @@
         android:title="@string/share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 
+    <item
+        android:id="@+id/miSearch"
+        android:icon="@drawable/ic_color"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/filter" />
+
 </menu>
