--- a/GridImageSearch/app/src/main/res/layout/activity_search.xml
+++ b/GridImageSearch/app/src/main/res/layout/activity_search.xml
@@ -10,12 +10,21 @@
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
 
-    <GridView
+    <com.etsy.android.grid.StaggeredGridView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/gvResults"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tbSearch"
+        app:item_margin="8dp"
+        app:column_count="3" />
+
+    <!-- <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gvResults"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tbSearch"
-        android:numColumns="3"/>
+        android:numColumns="3"/> -->
 
 </RelativeLayout>
