--- a/FragTweeter/app/src/main/res/menu/menu_timeline.xml
+++ b/FragTweeter/app/src/main/res/menu/menu_timeline.xml
@@ -2,12 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codepath.apps.Tweeter.TimelineActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
 
-        <item
-            android:id="@+id/miShare"
-            android:icon="@drawable/ic_share"
-            app:showAsAction="ifRoom|withText"
-            android:title="@string/share" />
+
+    <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_profile"
+        app:showAsAction="ifRoom|withText"
+        android:title="Profile"/>
+
+    <item
+        android:id="@+id/miShare"
+        android:icon="@drawable/ic_share"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/share" />
 </menu>
